Refactor project structure, delete SimpleEngine, add ILogger and Logger
The SimpleEngine project file was deleted, and two new separate projects named ILogger and Logger were created. The ILogger interface and its included LogLevel enum file were added as new files. Logger's header and source files were added as well. This restructuring of the project files promotes a cleaner architecture.

--- a/ILogger/ILogger.vcxproj.filters
+++ b/ILogger/ILogger.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SimpleEngine.cpp">
+    <ClCompile Include="ILogger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
