Split ILogger into ILoggerUnicode and ILoggerMultibyte
The ILogger class has been divided into two separate classes: ILoggerUnicode and ILoggerMultibyte. The ILoggerUnicode class now manages logging for Unicode characters while ILoggerMultibyte is responsible for Multibyte characters. This separation ensures a cleaner segregation based on encoding and enhances code maintainability.

--- a/ILogger/ILogger.vcxproj
+++ b/ILogger/ILogger.vcxproj
@@ -19,11 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ILogger.h" />
+    <ClInclude Include="ILoggerMultibyte.h" />
+    <ClInclude Include="ILoggerUnicode.h" />
     <ClInclude Include="LogLevel.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="ILogger.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
